[gd_scene load_steps=3 format=3 uid="uid://najouo1av8j8"]

[ext_resource type="Script" uid="uid://cd8b2jpkepeo" path="res://assets/ui/hp/hp.gd" id="1_57wnh"]
[ext_resource type="Texture2D" uid="uid://bodrp73h8f4ho" path="res://assets/ui/hp/full_heart.png" id="2_vvyrx"]

[node name="HP" type="Node2D"]
script = ExtResource("1_57wnh")

[node name="FullHeart5" type="Sprite2D" parent="."]
z_index = 200
position = Vector2(0, -59)
texture = ExtResource("2_vvyrx")

[node name="FullHeart4" type="Sprite2D" parent="."]
z_index = 200
position = Vector2(0, -45)
texture = ExtResource("2_vvyrx")

[node name="FullHeart3" type="Sprite2D" parent="."]
z_index = 200
position = Vector2(0, -30)
texture = ExtResource("2_vvyrx")

[node name="FullHeart2" type="Sprite2D" parent="."]
z_index = 200
position = Vector2(0, -15)
texture = ExtResource("2_vvyrx")

[node name="FullHeart1" type="Sprite2D" parent="."]
z_index = 200
texture = ExtResource("2_vvyrx")
